--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 
-DATABASE_URL="postgres://postgres:123@localhost:5432/pokemon?schema=public"
+DATABASE_URL="postgres://postgres:123@postgres:5432/pokemon?schema=public"
+# DATABASE_URL="postgres://iqlqlwkn:AdTi3_-mZRimJLOgTrDWw6xqCqRjzkr8@rain.db.elephantsql.com/iqlqlwkn"
 JWT_SECRET="mysecret123"
