--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.3.1",
     "reflect-metadata": "^0.1.13",
+    "run": "^1.4.0",
     "rxjs": "^7.8.1",
     "xlsx": "^0.18.5"
   },
